fix image height scaling when full width doesn't fit on screen

--- a/src/ui/web/css/timeline.css
+++ b/src/ui/web/css/timeline.css
@@ -28,6 +28,7 @@
 
 .message-container img {
     max-width: 100%;
+    height: 100%;
     display: block;
 }
 
